--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -1,58 +1,103 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% load i18n static %}
 {% block content %}
-
-<div class="jumbotron text-center">
-  <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="{% static 'lang-logo.png'%}">
-    </a>
-    <h1>Getting Started with Python on Heroku</h1>
-    <p>This is a sample Python application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-python"><span class="glyphicon glyphicon-flash"></span> Getting Started with Python</a>
-    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/python-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
-  </div>
-</div>
-<div class="container">
-  <div class="alert alert-info text-center" role="alert">
-    To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-python" class="alert-link">Getting Started with Python on Heroku</a> tutorial.
-  </div>
-  <hr>
   <div class="row">
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
-      <ul>
-        <li>This app was deployed to Heroku, either using Git or by using <a href="https://github.com/heroku/python-getting-started">Heroku Button</a> on the repository.</li>
+        <div class="col-lg-8 col-lg-offset-0">
+          <h2>Adres</h2>
+          <p>mgr Mateusz Miotk<br/>
+          Instytut Informatyki<br/>
+          Zakład optymalizacji kombinatorycznej<br/>
+          Uniwersytet Gdański<br/>
+          ul. Wita Stwosza 57<br/>
+          80-306 Gdańsk, Polska <br/>
+          </p>
 
-        <li>When Heroku received the source code, it fetched all the dependencies in the <a href="https://github.com/heroku/python-getting-started/blob/main/Pipfile">Pipfile</a>, creating a deployable slug.</li>
-        <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
-        <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Next Steps</h3>
-      <ul>
-        <li>If you are following the <a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started</a> guide, then please head back to the tutorial and follow the next steps!</li>
-        <li>If you deployed this app by deploying the Heroku Button, then in a command line shell, run:</li>
-        <ul>
-          <li><code>git clone https://github.com/heroku/python-getting-started.git</code> - this will create a local copy of the source code for the app</li>
-          <li><code>cd python-getting-started</code> - change directory into the local source code repository</li>
-          <li><code>heroku git:remote -a &lt;your-app-name></code> - associate the Heroku app with the repository</li>
-          <li>You'll now be set up to run the app locally, or <a href="https://devcenter.heroku.com/articles/getting-started-with-python#push-local-changes">deploy changes</a> to Heroku</li>
-        </ul>
-      </ul>
-      <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
-      <ul>
-        <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started with Python on Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/django-app-configuration">Configuring Django Apps for Heroku</a></li>
-      </ul>
-    </div>
-  </div> <!-- row -->
-   <div class="alert alert-info text-center" role="alert">
-    Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
-  </div>
-</div>
+        </div>
+        <!-- /col-lg-8 -->
+      </div>
+      <div class="row">
+          <div class="col-lg-8 col-lg-offset-0">
+
+            <h2>Kontakt oraz konsultacje</h2>
+            <p>
+            <img src="{% static "images/mail.png"%}"><br/>
+                <strong>Pokój</strong>: <mark><strong>4.10</strong></mark> (nowy budynek Instytutu Informatyki)<br/>
+            <strong>Konsultacje w semestrze zimowym: <mark>Czwartki godz. 8.00-10.00 - Pokój 4.10</mark></strong><br/>
+            <strong>Istnieje możliwość komunikowania się ze mną za pomocą MS Teams prawie 24/7.</strong>
+            </p>
+
+          </div>
+          <!-- /col-lg-8 -->
+      </div>
+      <div class="row">
+          <div class="col-lg-8 col-lg-offset-0">
+              <h2>Plan zajęć (semestr zimowy 2020/2021)</h2>
+{#              {% if user.is_authenticated %}#}
+{#                  {% if vacation %}#}
+{#                    <img src="{% static "images/wakacje.jpg"%}"><br/>#}
+{#                  {% elif userFaculty == "ug" %}#}
+{#                    {% include "myWebsite/scheldule.html" %}#}
+{#                  {% elif userFaculty == "pjatk" %}#}
+{#                    {% include "myWebsite/scheldule.html" %}#}
+{#                  {% else %}#}
+{#                     <p>Brak zajęć dla ciebie !!!</p>#}
+{#                  {% endif %}#}
+{#              {% else %}#}
+{#                   <p><button id="microsoft-login" class="btn btn-light" type="button">Dostęp do tej strony wymaga logowania za pomocą konta Office 365.</button></p>#}
+{#              {% endif %}#}
+{#          <div id = "table-wrapper" >#}
+{#              <div id="table-scroll" style="overflow: scroll;">#}
+
+{#          </div>#}
+{#</div>#}
+      <!--
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col"></th>
+                    <th scope="col" class="text-center">Poniedziałek</th>
+                    <th scope="col" class="text-center">Czwartek</th>
+                    <th scope="col" class="text-center">Sobota</th>
+                  </tr>
+                </thead>
+                <tbody>
+                <tr>
+                  <th scope="row" class="text-center">8-10</th>
+                  <td>Wprowadzenie do programowania <br/>Filologia angielska<br/> sp. Przetwarzanie języka naturalnego <br/>8.00-9.00 <br/>sala 310</td>
+
+                  <td>Konsultacje <br/>8.00-10.00 </td>
+                  <td rowspan="2">Języki programowania <br/> i środowisko programisty<br/>Grupa 2 <br/>Sala 29 <br/>8.05-12.15</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="text-center">10-12</th>
+                   <td></td>
+                  <td>Testowanie aplikacji Java <br/>3I sp. Tester programista<br/>9.15-11.30 <br/>sala 29</td>
+                  <td></td>
+
+                </tr>
+                <tr>
+                  <th scope="row" class="text-center">12-14</th>
+                  <td>Bazy danych</br> grupa 1I 2 </br> 12.15-13.45 </br>sala 29</td>
+                  <td></td>
+                   <td rowspan="3" class="last">Języki programowania <br/> i środowisko programisty<br/>Grupa 5 <br/>Sala 29<br/> 13.00-17.10</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="text-center"> 14-16</th>
+                  <td>Wprowadzenie do programowania <br/>Filologia angielska<br/> sp. Przetwarzanie języka naturalnego <br/>14.00-16.00 <br/>sala 29</td>
+                  <td>Seminarium zakładu <br/> optymalizacji kombinatorycznej<br/> 14.15-15.15</td>
+
+                </tr>
+                <tr>
+                  <th scope="row" class="text-center">16-18</th>
+                  <td></td>
+                  <td></td>
+                  <td>Warsztat programisty <br/>Grupa 1P 2 <br/>Sala 3.11 <br/>16.00-17.30</td> -->
+{#                </tr>#}
+{#                </tbody>#}
+{#              </table>#}
+          </div>
+          <!-- /col-lg-8 -->
+       </div>
+      <!-- /row -->
 {% endblock %}
