--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -6,8 +6,8 @@
       <title>Mateusz Miotk - Strona domowa</title>
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
       <meta name="Keywords" content="mateusz, miotk, instytut informatyki, uniwersytet gdański" />
-      <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <meta http-equiv="cache-control" content="no-cache" /> -->
+{#      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />#}
+{#      <meta http-equiv="cache-control" content="no-cache" />#}
       <meta name="Distribution" content="Global" />
       <meta name="author" content="Mateusz Miotk" />
       <meta name="Robots" content="index,follow" />
@@ -36,7 +36,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-{#        <a class="navbar-brand" href="{% url 'myWebsite:index_page' %}">Mateusz Miotk</a>#}
+{#        <a class="navbar-brand" href="{% url 'hello:index_page' %}">Mateusz Miotk</a>#}
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
